Finalização do login com autenticação jwt